working on structure, pictures placed correctly

--- a/contents/accessible/convenience.tex
+++ b/contents/accessible/convenience.tex
@@ -53,7 +53,7 @@ As we commented previously, all users can see the basic information without havi
 perform downloads or installations. Today, almost everyone is familiar with web browsing and if we do not force the user to realize extra taks, as 
 requiring them to sign in or install extra software, the probability the user uses our platform will be higher. 
 
-
+\newpage
 \elsparagraph{Evaluation}  
 \begin{itemize}
 \done The data necessary for our model has been extracted from the raw data.
