--- a/contents/compelling/userExperience.tex
+++ b/contents/compelling/userExperience.tex
@@ -58,7 +58,7 @@ that are identified and agree to share their location, Air Guru will show the po
 Regarding flexibility, the user can see the state of the air pollution by dates. Intermediate filtering can be done both by medical conditions and by pollutans. Finally, in the lower area where we have
 the historical data by area and personalization, we can visualize the information with different levels of detail; time, day, month and year. We can also
 select the date we want.
-
+\newpage
 \begin{figure}[ht]
     \centering
    \subfigure[Date filter]
@@ -78,12 +78,7 @@ select the date we want.
     Due to the large amount of data that is offered to the user, a waiting wheel has been implemented to indicate
     that the tool is processing information. Each time a control is pressed on the page, it is indicated with a change
     of color tonality. Also, progressive transitions are used, to indicate a process is happening.
-    
-    \begin{figure}[ht]
-        \centering
-    
-        \caption{Waiting symbol}
-    \end{figure}
+
     
     \begin{figure}[ht]
         \centering
