--- a/contents/relevant/useful.tex
+++ b/contents/relevant/useful.tex
@@ -34,7 +34,7 @@ In the following figure we see the difference between the zone history and the p
 the point where the measure was taken since it has been selected in the main map. We also like for the history of
 zone there is no filter for hours, since the measurements are reported every hour, this means that we will not find
 intermediate measures in the dataSet.
- 
+ \newpage
 \begin{figure}[ht]
     \centering
     \includegraphics[width=11cm]{zoneRecords}
