--- a/chapter.tex
+++ b/chapter.tex
@@ -56,6 +56,7 @@
 \input{contents/compelling} 
 \input{contents/evaluation} 
 \input{contents/conclusion} 
+\input{contents/references} 
 
 \end{document}
   
