--- a/contents/references.tex
+++ b/contents/references.tex
@@ -1,3 +1,6 @@
+\newpage
+\section{References}
+
 Braidot, N.P. (2009). Neuromarketing. Ediciones Gestión 2000.\\
 
 Burton, B., Geishecker, L., Hostmann B, Friedman, T. y Newman, D. (2006).
@@ -19,8 +22,8 @@ Journalism Institute and Infoactive. \\
 Chakrabarti, S. (2003). Mining the Web: Discovering Knowledge from Hypertext Data.
 California. Morgan Kaufmann.\\
 
-Davenport, T., & Prusak, L. (2000). Working Knowledge: How Organizations Manage
-What They Know. Massachusetts: Harvard Business Review Press.\\
+Davenport, T., and Prusak, L. (2000). Working Knowledge: How Organizations Manage
+What They Know. Massachuset: Harvard Business Review Press.\\
 
 Davenport, T. H., Barth, P. y Bean, R. (2012). How big data is different. MIT Sloan
 Management Review.\\
@@ -41,8 +44,8 @@ Publishers.\\
 Han, J., Kamber, M. y Pei, J. (2006). Data Mining, Concepts and Techniques (2º
 edición). Massachusets: Morgan Kaufmann.\\
 
-Jarke, M., Jeusfeld, M.A., Quix, C., & Vassiliadis, P. (1998). Architecture and Quality of
-Data Warehouses: An Extended Repository Approach. Advanced Information Systems
+Jarke, M., Jesusfeld, M.A., Quix, C., and Vassiliadis, P. (1998). Arquitecture and Quality
+of Data Warehouses: An Extended Repository Approach. Advanced Information Systems
 Engineering, Lecture Notes in Computer Science.\\
 
 Kerin, R. (2014). Marketing. McGraw Hill. 
