--- a/contents/accessible/available.tex
+++ b/contents/accessible/available.tex
@@ -26,7 +26,7 @@ Our tool uses the air quality data provided by the city of Malaga in its open da
 \begin{figure}[ht]
     \centering
    \subfigure[Main page]
-    {\includegraphics[width=5.5cm  ]{OpenDataPortal}}
+    {\includegraphics[width=5.5cm]{openDataPortal}}
     \hfill
     \subfigure [Category environment]
        { \includegraphics[width=5.5cm]{openDataPortalEnviromentCategory}}
