--- a/contents/accessible/convenience.tex
+++ b/contents/accessible/convenience.tex
@@ -20,7 +20,7 @@ We must offer the information through a platform with which the user is familiar
 We must not make the user perform complicated steps, or require them to add extra software or hardware.
 
 \subsubsection{How we solve it. Aire Guru} 
-Malaga's air quality dataSet is updated every hour, Aire Guru automates the process of collecting the
+Malaga's air quality dataset is updated every hour, Aire Guru automates the process of collecting the
 data through a CRON job that executes a script implemented in JavaScript periodically. This reads the data from the url, processes it,
 cleans and stores it in a MongoDB database. That is to say, Aire Guru implements all the necessary collection processes.
 
