--- a/contents/accessible/interpretability.tex
+++ b/contents/accessible/interpretability.tex
@@ -63,9 +63,9 @@ unneccessary as the  already contains the coordinates of the station, and coordi
 
 \textbf{Transformation}. We need the values to have a format appropriate to the fields that they represent. For example, the date and time 
 of the measurement is stored in date format
-instead of the string provided in the raw dataSet. \\
+instead of the string provided in the raw dataset. \\
 
-\textbf{Extraction}. We need to select the relevant fields. This dataSet offers one or more measurements for each pollutant, which can be 
+\textbf{Extraction}. We need to select the relevant fields. This dataset offers one or more measurements for each pollutant, which can be 
 represented by three different fields, a
 quantitative measurement, a qualitative of the fixed station of measurement and a qualitative station of a mobile station. We will add a 
 field containing the measurement which is most relevant for our purposes, and eliminate the non-relevant measurerments to minimize processing time. \\
@@ -74,7 +74,7 @@ For security, a second totally independent architecture has been implemented tha
 
 \paragraph{Evaluation} \mbox{} 
 \begin{itemize}
-    \done We can understand exactly what each one of the fields represented in the dataSet means thanks to the 
+    \done We can understand exactly what each one of the fields represented in the dataset means thanks to the 
          complementary information presented in the open data portal and by the complementary information provided by the company in charge of
          collect the data.
     \done The data needed for our model has been extracted from the raw data.
