--- a/contents/accessible/model.tex
+++ b/contents/accessible/model.tex
@@ -23,7 +23,7 @@ information to gain useful knowledge. \\
      
     In order to build a system that makes data accessible, it is essential to design a model to specify the
     information that we want to obtain. The design of a system will allow that, based on given values, provide some results.
-    For this it will be necessary to have a solid knowledge of the dataSet that is needed, the values,
+    For this it will be necessary to have a solid knowledge of the dataset that is needed, the values,
     their units and how they relate to each other.
 
 
