--- a/contents/relevant/model.tex
+++ b/contents/relevant/model.tex
@@ -1,5 +1,5 @@
 \subsection{Design}
-To make a good selection in the dataSet of the fields that are relevant or the combination of these, it is essential to
+To make a good selection in the dataset of the fields that are relevant or the combination of these, it is essential to
 solid knowledge on the subject to be treated. Therefore, it is fundamental to dedicate the necessary time to enter the
 importance of the concept, what benefits it can bring or what situations can dameage us.
 The points that should be clear in the design phase are: \\
@@ -17,7 +17,7 @@ The points that should be clear in the design phase are: \\
 we should start simple and move to more complex representations.
 
 \subsubsection{How to solve it} 
-Once a goal has been set, we must stipulate the necessary fields of the dataSet that we need. That is, we select the fields that interest us. 
+Once a goal has been set, we must stipulate the necessary fields of the dataset that we need. That is, we select the fields that interest us. 
 Following this, we need to analyze the data provided and see if the list of fields that the source offers us is sufficient to rech the chosen objective.
 If not directly, we the combination of them. Next, we decide which values are more outstanding and we will provide them to the user.
 
@@ -41,7 +41,7 @@ affect different diseases in different ways. \\
 
 As the main objective is awareness, we provide all the data in an organized way in the Glossary of Air Guru. \\
 
-Once these pollutans are selected, we verify if we have the particular data in our dataSet. As we mentioned earlier, some samples show measurements 
+Once these pollutans are selected, we verify if we have the particular data in our dataset. As we mentioned earlier, some samples show measurements 
 from fixed and / or mobile stations and these can be quantitative or qualitative and others can be incomplete. We will have to select the
 samples to provide us with the most complete information or the most accurate, in this case the quantitative measure will prevail to the qualitative 
 one and in the case that there is only qualitative
@@ -72,7 +72,7 @@ totally different, designed to clearly convey danger. \\
 
 \elsparagraph{Evaluation}  
 \begin{itemize}
-    \done The objective has been clearly defined and an investigation has been carried out, determining if the dataSet is appropriate.
+    \done The objective has been clearly defined and an investigation has been carried out, determining if the dataset is appropriate.
     \done Worrying levels have been defined as poor, bad and unhealthy and are represented in the Air Guru tool. They stand out clearly so that the user is able to locate them quickly.
      \done The workflow is satisfactory, since the user knows the level of pollution at any location, at a simple glance. It is easy to explore the information further, if the user wishes.
          
