--- a/contents/accessible/available.tex
+++ b/contents/accessible/available.tex
@@ -4,11 +4,11 @@ As we mentioned in the introduction to this chapter, the dataSets may be availab
 mean that they are readily accessible.
 The challenges we encounter with the raw data direct from the source of origin, are the following: \\   
  
-\textbf{Location}. DataSets are usually available in open data portals that have been organized and structured in particular ways.
+\textbf{Location}. Datasets are usually available in open data portals that have been organized and structured in particular ways.
 Despite more companies attempting to offer functional and efficient user interfaces, often a complicated search and selection process is necessary for a user to find what they need. Sometimes the data may not all be available in the one location, but may require searching through multible portals.
-\textbf{Extraction}. DataSets are usually available through an API (Application Programming Interface). APIs are not easily interpretable by the average user. Normally there will be a document describing the fields and values presented, and indicating how to actually use the API. \\
+\textbf{Extraction}. Datasets are usually available through an API (Application Programming Interface). APIs are not easily interpretable by the average user. Normally there will be a document describing the fields and values presented, and indicating how to actually use the API. \\
 
-\textbf{Readability}. DataSets are usually represented in a format designed to be processed by software. This is fairly unintelligible to a human user. At best,
+\textbf{Readability}. Datasets are usually represented in a format designed to be processed by software. This is fairly unintelligible to a human user. At best,
 the data will be represented in a table and even then, it will often be quite difficult to extract the required information.
 
 Therefore, we can not say that data interfaces are commonly accessible in a useful way for the average user. \\
