--- a/contents/accessible/available.tex
+++ b/contents/accessible/available.tex
@@ -1,6 +1,6 @@
 \subsection{Availability}
     
-As we mentioned in the introduction to this chapter, the dataSets may be available in the original source. However, this doesn't necessarily
+As we mentioned in the introduction to this chapter, the datasets may be available in the original source. However, this doesn't necessarily
 mean that they are readily accessible.
 The challenges we encounter with the raw data direct from the source of origin, are the following: \\   
  
