--- a/contents/accessible/available.tex
+++ b/contents/accessible/available.tex
@@ -22,7 +22,7 @@ data cleaning.
  
 \subsubsection{How we solve it using Aire Guru.} 
 
-Our tool uses the air quality data provided by the city of Malaga in its open data portal.\footnote{\url{https://datosabiertos.malaga.eu/}}\\
+Our tool uses the air quality data provided by the city of Malaga in its open data portal.(https://datosabiertos.malaga.eu/)\\
 \begin{figure}[ht]
     \centering
    \subfigure[Main page]
@@ -47,7 +47,7 @@ Our tool uses the air quality data provided by the city of Malaga in its open da
     In this case, if we click on the link, data is displayed in a new tab. The use of software
     for translating the data is not strictly necessary, but we can see that the format (JSON) is not easily readable in human terms.
 
-Aire Guru \footnote{\url{https:\\aire.guru}} offers all the necessary information on a web platform which has been designed to facilitate human understanding.
+Aire Guru (https:\\aire.guru) offers all the necessary information on a web platform which has been designed to facilitate human understanding.
 
 \elsparagraph{Evaluation}  
 
