--- a/contents/accessible/interpretability.tex
+++ b/contents/accessible/interpretability.tex
@@ -5,8 +5,8 @@ From this data, we need to select the relevant samples, and from these, the fiel
 
 
 Below we can see examples. The first one is taken from the European open data portal
-\footnote{\url{https://tinyurl.com/y3d76525}} and the second from the North American open data portal
-\footnote{\url{https://data.cityofnewyork.us/api/views/kku6-nxdu/rows.json?accessType=DOWNLOAD}}.
+(https://www.eea.europa.eu/data-and-maps/data/air-pollutant-concentrations-at-station/air-pollutant-concentrations-201) and the second from the North American open data portal
+(https://data.cityofnewyork.us/api/views/kku6-nxdu/rows.json?accessType=DOWNLOAD).
 
 \begin{figure}[h]
     \centering
@@ -30,7 +30,7 @@ cleaning of the data. Without automation, theses processes are tedious and time 
 The extracted data is in GeoJSON format, a format which provides a JSON object with nested subdocuments. Each of these
 subdocuments contains a set of data in key-value form.
 In the following figure we can see the beginning of the document downloaded on June 9, 2019
-\footnote{\url{https://datosabiertos.malaga.eu/recursos/ambiente/calidadaire/calidadaire.json}}\\
+(https://datosabiertos.malaga.eu/recursos/ambiente/calidadaire/calidadaire.json)\\
 \newpage
 \begin{figure}[h]
     \centering
@@ -52,7 +52,7 @@ In the following figure we can see the beginning of the document downloaded on J
 
 
 For a more detailed description of the measures, we have to resort to an external resource. In this case we directly contacted 
-the company that installs the UrbanClouds\footnote{\url{https://urbanclouds.city/es/}} measuring stations and provides the data 
+the company that installs the UrbanClouds (https://urbanclouds.city/es/) measuring stations and provides the data 
 to the Malaga city council.
 
 After selecting the necessary fields according to our design plan, we carried out different cleaning, transformation and extraction tasks. \\
