--- a/contents/accessible/knowAbout.tex
+++ b/contents/accessible/knowAbout.tex
@@ -7,8 +7,8 @@ No matter how optimized the representation of the data is and how available we m
 The best way is to advertise the product in the right media with right format.
 \subsubsection{How we solve it. Aire Guru} 
 Our tool is implemented for the city of Malaga, so we are currently working to publicize it in this city.
-It is currently available in the open data portal in the web site tab \footnote {\url {https://datosabiertos.malaga.eu/aplicaciones}} \\
-Aire Guru participated in the first open data reuse contest organized by the Malaga City Council \footnote {\url {https://tinyurl.com/yx9wzutj}}
+It is currently available in the open data portal in the web site tab (https://datosabiertos.malaga.eu/aplicaciones) \\
+Aire Guru participated in the first open data reuse contest organized by the Malaga City Council (http://cemi.malaga.eu/es/novedades/detalle/1-Concurso-de-Reutilizacion-de-Datos-Abiertos-del-Ayuntamiento-de-Malaga)
 and was a finalist in the web page category.
 
 
