Compelling/Engagement general

--- a/contents/compelling/engagement.tex
+++ b/contents/compelling/engagement.tex
@@ -1,18 +1,24 @@
 \subsection{Engagement}
- 
-Juego emocional
-Elementos de la vida real
-actual
+It is a truism that you can lead a horse to water, but you can't make it drink. \\
 
-\subsubsection{How to solve it} 
+So it is with our users.
+No matter how easy to access, how important, and how personalised the information, if we cannot engage and maintain the user's interest,
+they will likely ignore the information we provide, possibly to their significant detriment.
+We must think like salespeople, like bestselling authors, like ad-agency strategists.
+This is often a difficult shift in mindset for scientists and engineers to make.
+Our attitude to sales and marketing ranges from begruding acceptance to violent hostility.
 
+It is important to recognise the difference between ourselves and our motivations, and our the motivations of our users. Whilst we engage with the data in a scientific
+manner, the users do not. They have no inherent interest. In fact, it is quite possible that our own interest is less in the information per-se, and more in the process
+by which we come to it, the analysis techniques, the grant and publication opportunities. We are all considerably less rational than we think, and more motivated by
+emotional impulses. We may wish the world to be a rational place driven by the cool dictates of reason, but wishing does not make it so.
+
+It is well known in advertising, PR, and politics, that emotion easily trumps reason - these fields have turned the art of emotional engagement into a scientific discipline.
+As have companies like Facebook, Apple and Google.
+
+\subsubsection{How to solve it}
 
 \subsubsection{How we solve it. Aire Guru} 
----historial personal
-Aire Guru cuenta con una seccion de ayuda  donde explica cada una de las secciones de la herramienta. Una de las acciones mas complicadas
-podria ser la importacion del historial de ubicaciones de Google para ver la exposicion a la que estamos expuestos. Esta ayuda, tambien 
-contiene un apartado donde se explica paso a paso como obtener el historia de ubicaciones e importarlo en Aire Guru.
-personal-familiar, hablar de las nubes
 \elsparagraph{Evaluation}  
 \begin{itemize}
     \done
