Corrected Malaga spelling

--- a/contents/accessible/available.tex
+++ b/contents/accessible/available.tex
@@ -22,7 +22,7 @@ data cleaning.
  
 \subsubsection{How we solve it using Aire Guru.} 
 
-Our tool uses the air quality data provided by the city of Malaga in its open data portal.(https://datosabiertos.malaga.eu/)\\
+Our tool uses the air quality data provided by the city of Málaga in its open data portal.(https://datosabiertos.malaga.eu/)\\
 \begin{figure}[ht]
     \centering
    \subfigure[Main page]
@@ -38,7 +38,7 @@ Our tool uses the air quality data provided by the city of Malaga in its open da
      \subfigure[GeoJson Document]
      { \centering \includegraphics[width=4.75cm]{geoJsonAirQualityDataRaw}}
   
-  \caption{Open Data Portal Malaga}
+  \caption{Open Data Portal Málaga}
     \end{figure}
 
     This data portal offers a variety of categories (represented by different icons) indicating classifications of the dataset.
