--- a/contents/accessible/convenience.tex
+++ b/contents/accessible/convenience.tex
@@ -27,7 +27,7 @@ cleans and stores it in a MongoDB database. That is to say, Aire Guru implements
 Thanks to this infrastructure, the user is able to visualize the evolution of pollutants since 2018. The user can also track their personal exposure
  to these pollutants over the same period of time.
 
-In addition, this automation allows the user to visualize the pollution in the city of Malaga in real time, and see specifically the location where he is 
+In addition, this automation allows the user to visualize the pollution in the city of Málaga in real time, and see specifically the location where he is 
 occurring. \\
 \newpage
 
