--- a/contents/introduction/motivation.tex
+++ b/contents/introduction/motivation.tex
@@ -20,4 +20,4 @@ The objective of this chapter is to stipulate the necessary points to use the da
 to help us in our day to day in a useful way. These concepts have been applied in the Air Guru project,
 that brings the data to users in an easy, friendly, compressible and adapted to their needs. \\
 
-Aire Guru is a web tool for personalized monitoring of air quality in Malaga.
+Aire Guru is a web tool for personalized monitoring of air quality in Málaga.
