--- a/contents/relevant/model.tex
+++ b/contents/relevant/model.tex
@@ -31,11 +31,11 @@ Our main objective is to create awareness of the importance of air pollution in 
     \item How it is calculated and what parameters we need for its calculation
     \item What are the harmful levels in general and for each pollutant
 \end{itemize}
-The measure that best represents the level of air pollution, in this case is the AQI. The city of Malaga is covered by the European legislation, 
+The measure that best represents the level of air pollution, in this case is the AQI. The city of Málaga is covered by the European legislation, 
 so we focus investigations of official sources in this regulation.
 We look for the relationships that pollutants have with different diseases, for this we resort to clinical studies. For each of the diseases, we 
 research at the symptoms and how they can be aggravated by each pollutant.
-For each pollutant, we look for sources of pollution and see if they occur in the city of Malaga and in what concentrations.
+For each pollutant, we look for sources of pollution and see if they occur in the city of Málaga and in what concentrations.
 With all this information we define that the pollutants that affect air quality are CO, NO2, O3 and PM (Particulated Material). Dfferent levels of particles
 affect different diseases in different ways. \\
 
@@ -64,7 +64,7 @@ totally different, designed to clearly convey danger. \\
   \caption{Alert situation}
     \end{figure}
 
-    Regarding the workflow, we are guiding the user from the selection of a point in the city of Malaga, either on his own initiative
+    Regarding the workflow, we are guiding the user from the selection of a point in the city of Málaga, either on his own initiative
     or automatic to the details of this point in real time and we continue to show  the evolution of the pollution at that point.
     The logic of this development is that it is anticipated that the user will be interested in the pollution that surrounds him in real time and if
     he wanta to know the breakdown of the pollutants at the point where he is, he can continue to inquire. The map, in addition to showing
