--- a/contents/accessible/interpretability.tex
+++ b/contents/accessible/interpretability.tex
@@ -38,7 +38,7 @@ In the following figure we can see the beginning of the document downloaded on J
    \hfill
    \subfigure[Second subdocument]{ \centering \includegraphics[width=4.75cm]{geoJsonAirQualityData2}}
  
-    \caption{Air quality Document [09/06/2019].Open Data Portal Malaga}
+    \caption{Air quality Document [09/06/2019].Open Data Portal Málaga}
     \end{figure}
     
     In this excerpt we can see the first two subdocuments. Each subdocument contains the coordinates of the air quality 
@@ -47,13 +47,13 @@ In the following figure we can see the beginning of the document downloaded on J
 \begin{figure}[ht]
     \centering
     \includegraphics[width=8cm]{geoJsonAirQualityDataDescription}
-    \caption{Air quality data description [09/06/2019].Open Data Portal Malaga}
+    \caption{Air quality data description [09/06/2019].Open Data Portal Málaga}
 \end{figure}
 
 
 For a more detailed description of the measures, we have to resort to an external resource. In this case we directly contacted 
 the company that installs the UrbanClouds (https://urbanclouds.city/es/) measuring stations and provides the data 
-to the Malaga city council.
+to the Málaga city council.
 
 After selecting the necessary fields according to our design plan, we carried out different cleaning, transformation and extraction tasks. \\
 
