--- a/contents/accessible/model.tex
+++ b/contents/accessible/model.tex
@@ -43,7 +43,7 @@ the air quality index (AQI), specifically the European air quality index (EAQI).
     \caption{Aire Guru. Landing page. Top section}
 \end{figure}
 
-It shows the AQI in the whole city of Malaga by zones, both the general and the AQI of each of the 
+It shows the AQI in the whole city of Málaga by zones, both the general and the AQI of each of the 
 pollutans in a more disaggregated form from September 2018 to the present. It also shows the evolution
 of these for days, months and years.
 It is capable of creating a set of the most relevant pollutans by medical condition. An innovative feature is the capacity to display levels of any particular pollutant by hour, day, month, or year. 
