--- a/contents/relevant/datasetQuality.tex
+++ b/contents/relevant/datasetQuality.tex
@@ -48,9 +48,9 @@ Database analysis tools can tell us the completeness of the fields, that is, wha
 samples contain each field.
 
 \subsubsection{How we solve it. Aire Guru} 
-The source of data is verified by both the CEMI (Malaga information center) and UrbanClouds, the private company
-that collects and sends the data to the city of Malaga.
-With the description of the data in the open data portal of Malaga and the information received by UrbanClouds,
+The source of data is verified by both the CEMI (Málaga information center) and UrbanClouds, the private company
+that collects and sends the data to the city of Málaga.
+With the description of the data in the open data portal of Málaga and the information received by UrbanClouds,
 we obtain all the necessary information to interpret the dataset. \\
 
 For each field, a graphical study has been carried out with the Tableau tool and has verified that the values of the
