Engagement how to solve it

--- a/contents/compelling/engagement.tex
+++ b/contents/compelling/engagement.tex
@@ -18,7 +18,16 @@ As have companies like Facebook, Apple and Google.
 
 \subsubsection{How to solve it}
 
-\subsubsection{How we solve it. Aire Guru} 
+So, we must create desire. Whether that is a desire to know more, a desire to see 'what happens next' or a desire to avoid a negative outcome.
+Avoiding a negative outcome innevitably involves invoking some fear. Before we cast this as some Machiavellian evil, consider that the simple
+technique of using a skull-and-crossbones icon, or red text as a way of indicating danger or some situation that requires attention, is an
+application of exactly this technique. We are invoking a fear-response, however mild.
+
+Note however that not all triggers are culturally independent. Colour is particularly interesting in this respect, and your use of colour might
+need to be modified for different target audiences (\textbf{NEED REFERENCE}).
+
+\subsubsection{How we solve it. Aire Guru}
+
 \elsparagraph{Evaluation}  
 \begin{itemize}
     \done
