added GDPR reference

--- a/contents/references.tex
+++ b/contents/references.tex
@@ -56,6 +56,8 @@ Packt Publishing.
 Lin, T. Y. (2002). Attribute transformation for data mining I: theoretical explorations.
 International Journal of Intelligent Systems.\\
 
+Markham, K. (2018). A Practical Guide to the General Data Protection Regulation (GDPR).Law Brief Publishing \\
+
 Muñiz, R. (2014). Marketing en el siglo XXI. Centro de estudios financieros. \\
 
 Murray, S. (2013). Interactive Data visualization for the Web. Massachusetts (EUA):
@@ -78,15 +80,10 @@ Telea, A. C. (2014). Data Visualization: Principles and practice, second Edition
 Tufte, E. R. (2001). The Visual Display of Quantitative Information. Cheshire,
 Connecticut: Graphic Press.\\
 
- Ware, C. (2013). Information Visualization. Waltham, Massachusetts: Morgan
+Ware, C. (2013). Information Visualization. Waltham, Massachusetts: Morgan
 Kaufmann Publishers. \\
 
 Weller, K. (2010). Knowledge Representation in the Social Semantic Web. New York:
 De Gruyter. \\
 
-
-
-
-
-Protection data law.
 
