Engagement v1 all but evaluation

--- a/contents/compelling/engagement.tex
+++ b/contents/compelling/engagement.tex
@@ -6,12 +6,12 @@ No matter how easy to access, how important, and how personalised the informatio
 they will likely ignore the information we provide, possibly to their significant detriment.
 We must think like salespeople, like bestselling authors, like ad-agency strategists.
 This is often a difficult shift in mindset for scientists and engineers to make.
-Our attitude to sales and marketing ranges from begruding acceptance to violent hostility.
+Our attitude to sales and marketing ranges from begruding acceptance to violent hostility. \\
 
-It is important to recognise the difference between ourselves and our motivations, and our the motivations of our users. Whilst we engage with the data in a scientific
+It is important to recognise the difference between ourselves and our motivations, and the motivations of our users. Whilst we engage with the data in a scientific
 manner, the users do not. They have no inherent interest. In fact, it is quite possible that our own interest is less in the information per-se, and more in the process
 by which we come to it, the analysis techniques, the grant and publication opportunities. We are all considerably less rational than we think, and more motivated by
-emotional impulses. We may wish the world to be a rational place driven by the cool dictates of reason, but wishing does not make it so.
+emotional impulses. We may wish the world to be a rational place driven by the cool dictates of reason, but wishing does not make it so. \\
 
 It is well known in advertising, PR, and politics, that emotion easily trumps reason - these fields have turned the art of emotional engagement into a scientific discipline.
 As have companies like Facebook, Apple and Google.
@@ -20,18 +20,40 @@ As have companies like Facebook, Apple and Google.
 
 So, we must create desire. Whether that is a desire to know more, a desire to see 'what happens next' or a desire to avoid a negative outcome.
 Avoiding a negative outcome innevitably involves invoking some fear. Before we cast this as some Machiavellian evil, consider that the simple
-technique of using a skull-and-crossbones icon, or red text as a way of indicating danger or some situation that requires attention, is an
-application of exactly this technique. We are invoking a fear-response, however mild.
+technique of using a stop sign, radioactivity icon, or red text as a way of indicating danger or some situation that requires attention, is an
+application of exactly this technique. We are invoking a fear-response, however mild. \\
 
 Note however that not all triggers are culturally independent. Colour is particularly interesting in this respect, and your use of colour might
-need to be modified for different target audiences (\textbf{NEED REFERENCE}).
+need to be modified for different target audiences (\textbf{NEED REFERENCE}). \\
+
+Desire can be maintained by creating an ongoing narrative, or letting the data tell a story. This can be as simple as showing the change in 
+values over time, or can be more complex, such as involving not only changing values over time, but also showing the relationship between causes and
+effects. Where real-time data is available, allow users to set alarms so that they are notified of specific changes, makes the data a part of the user's
+life in an ongoing fashion. It is important not to overdo that however - alerts that cannot be easily cancelled create a negative emotion that you
+definitely want to avoid. \\
 
 \subsubsection{How we solve it. Aire Guru}
 
+Aire-Guru uses three specific techniques to generate emotional engagement:
+
+\begin{itemize}
+
+    \item The simplest technique is the use of the colour red to indicate dangerous levels of pollutants, and green to indicate low levels.
+    Additionaly, we use a gas-mask/skull-and-crossbones icon to indicate an over-all dangerous level of pollutants.
+
+    \item By linking the pollutant levels to specific medical conditions, users get a very visceral interpretation of the data. This is, admittedly, an
+    extreme form of engagement.
+    
+    \item Because we provide a facility to track pollutant levels over time, and link this data to a history of the user's physical location, we provide
+    an ongoing narrative about the user's cumulative pollution exposure.
+
+\end{itemize}
+
 \elsparagraph{Evaluation}  
+
 \begin{itemize}
     \done
     \crossed
-    
 \end{itemize}
+
 \newpage
