reorganizing intro/abstract

--- a/contents/introduction/methodology.tex
+++ b/contents/introduction/methodology.tex
@@ -5,3 +5,6 @@ the average user. For each one of the secluded ones, we will see the theory, as 
 in the Air Guru project and its evaluation.
 Next, we will see a general evaluation of these three concepts and to finish the 
 obtained conclusions.
+This chapter is written with the objectives we want to achieve in mind for the reusing of bigData. It means, make the 
+concepts accessible, relevant and compelling. It intents to be a guide which show these principles
+in its structure.
