--- a/contents/abstract.tex
+++ b/contents/abstract.tex
@@ -1,61 +1,10 @@
-Government open data portals make a huge effort to collect data and make it available to their citizens.
-However, this data is often wasted, since it is not always in effectively accessible, relevant and compelling
-for the average citizen. Air quality data is one such example.
 
-Urban residents are surrounded by many sources of air pollution, and it is the direct cause of many different symptoms, ranging from simple eye irritation 
-to, in extreme cases, death. Particularly for high-risk groups like children and the elderly.
-The WHO (World Health Organization) estimates 4.2 million deaths
-\footnote{\url{https://www.who.int/airpollution/ambient/en/}} per year due to air pollution.
-Air pollution has a significant affect on people with asthma, cardiopathies, allergies, and neurological pathologies.
+Nowdays there is a huge amount of data available, however no always is usefull for the averange user. In this
+chapter we explain with points needs to be cover in order to transform a dataSet into a usefull information,
+making it accessible, relevant and compelling to the users.
 
-Air pollution not only aggravates existing diseases, but can also be an initial cause of them, such as in the case of foetal brain
-damage\footnote{\url{https://tinyurl.com/y2fzk8uk}} 
-caused by the mother's exposure to air pollution.
+The different points explained, have been implemented and tested in our tool Aire Guru (https://airquality.guru).
+In each section we can find the concept explained, how to achieve it and how we have applied.
 
-To be able to control the level of exposure we need to know the levels
-in the specific locations that we frequent, and the variation during specific times.
-To make this information as accessible as possible, it should be freely and publicly available, and the presentation
-must be simple enough to be understandable by the average citizen.
+It is a guide, structured and easy read and apply to get the maximun of a dataset.
 
-We have created a tool - Aire Guru - which collects air pollution data periodically, stores it for historical use, 
-processes it to extract relevant information, personalizes it to engage the user with regard to their individual
-circumstance, visualizes it in an easy to understand format, and provides it online to facilitate its accessibility. Furthermore,
-descriptions of all the data and how it has been processed are also provided to raise public awareness of the value
-of this data. Aire Guru has been successfully tested, using the Air Quality data provided
-by the Málaga open data portal\footnote{\url{https://datosabiertos.malaga.eu/}} in the Spanish city of Málaga.
-
-There are already many tools available, however they have various failings.
-
-The most common problems are:
-
-\begin{itemize}
-
-\item Obsolete measurements. Measurements need to be taken regularly, since there can be huge differences
-between pollution levels at different times of the day.
-
-\item Limited geographic coverage. The data must cover a reasonable proportion of areas that people spend significant time in.
-
-\item Insufficiently granular measurements. Measurements must be at a reasonably fine level of granularity. One single measurement for an entire city is not useful.
-
-\item Poor presentation. Often the information is presented in an uninterpreted form, making it difficult for users to visualize, especially in a geographic sense.
-
-\item Poor discrimination and interpretation. Many tools show individual values as a number or a colour. This information is not
-enough for the user to take control of their exposure. Such visualizations are not really compelling. 
-
-\end{itemize}
-
-Our webtool \footnote{\url{https://airquality.guru/}}, solves the deficiencies described above.
-
-Measurements are published hourly and come from measurement stations placed throughout the 
-city of Málaga, covering entire urban region at a granularity of $100m^2$
-
-The information is presented in a clear and simple manner, making it possible to see the most polluted regions,
-and allowing the user to make comparisons both geographically and historically. It provides personalised information, such as the most relevant pollutants for a user's particular medical conditions, and can track
-the pollution they are exposed to both in real time and over a historical period, by linking with location data from their mobile device. 
-
-The system has been successfully tested with 14 subject in the Spanish city of Málaga. The survey showed a high degree of satisfaction, particularly regarding the clarity and completeness of the the information and analysis.
-More than the half of the subjects were not aware of how air quality is measured and how it 
-can affect their health. Four of the subjects discovered that they have a medical 
-condition which can be affected by air pollution.
-    
-Aire Guru is available online, free of charge.
