--- a/contents/abstract.tex
+++ b/contents/abstract.tex
@@ -1,10 +1,9 @@
+The steps involved in collecting, analysing and making important datasets available to the general public are well understood. \\
 
-Nowdays there is a huge amount of data available, however no always is usefull for the averange user. In this
-chapter we explain with points needs to be cover in order to transform a dataSet into a usefull information,
-making it accessible, relevant and compelling to the users.
+But how do we make such data accessible, relevent, and compelling for the average user? \\
 
-The different points explained, have been implemented and tested in our tool Aire Guru (https://airquality.guru).
-In each section we can find the concept explained, how to achieve it and how we have applied.
+In this chapter we provide a framework for considering this question, providing guidance and checklists, showing how we applied this framework
+in the development of the Aire Guru tool developed by the first author at the International University of La Rioja, and evaluating the effectiveness
+of Aire Guru with respect to the framework metrics. \\
 
-It is a guide, structured and easy read and apply to get the maximun of a dataset.
-
+This chapter is itself an example of the framework principles: Accessible, Relevant, and Compelling. \\
