--- a/contents/abstract.tex
+++ b/contents/abstract.tex
@@ -2,8 +2,9 @@ The steps involved in collecting, analysing and making important datasets availa
 
 But how do we make such data accessible, relevent, and compelling for the average user? \\
 
-In this chapter we provide a framework for considering this question, providing guidance and checklists, showing how we applied this framework
-in the development of the Aire Guru tool developed by the first author at the International University of La Rioja, and evaluating the effectiveness
-of Aire Guru with respect to the framework metrics. \\
+In this chapter we provide a framework for considering this question, providing guidance and checklists,
+and show how we applied this framework in the development of the Aire Guru tool developed by the first
+author at the International University of La Rioja.
+We also use the framework to evaluate the effectiveness of Aire Guru in creating awareness of air pollution and its effects
 
 This chapter is itself an example of the framework principles: Accessible, Relevant, and Compelling. \\
