Start to refactor accessible

--- a/chapter.tex
+++ b/chapter.tex
@@ -11,9 +11,6 @@
 \newcommand{\done}{\item[\checkmark]}
 \newcommand{\crossed}{\item[$\times$]}
 
-    
-
-
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{3}
 \hbadness=99999
@@ -29,34 +26,33 @@
 \title{Aire Guru: Making Pollution Data Accessible, Relevant, and Compelling.}
 
 \author{Luz Morales}
-\address{International University of La Rioja}
-\ead{luzmoralesjimenez@hotmail.com}
+\ead{luz@illuminous.io}
+\author{Antony Blakey}
+\ead{antony@illuminous.io}
+\address{Illuminous}
 
-\begin{keyword}
- Air Quality Index \sep Pollution \sep Monitoring \sep Visualization \sep Analysis \sep BigData
-\end{keyword}
-
- \begin{abstract}
+\begin{abstract}
 \input{contents/abstract} 
 \end{abstract}   
 
+\begin{keyword}
+Air Quality Index \sep Pollution \sep Monitoring \sep Visualization \sep Analysis \sep Big Data
+\end{keyword}
 
 \end{frontmatter}
 
-\begin{comment}
 \newpage
 \tableofcontents
+\newpage
 \listoffigures
-\end{comment}
 \newpage
 
-\input{contents/introduction} 
-\input{contents/accessible} 
-\input{contents/relevant} 
-\input{contents/compelling} 
+\input{contents/introduction/_section} 
+\input{contents/accessible/_section} 
+\input{contents/relevant/_section} 
+\input{contents/compelling/_section} 
 \input{contents/evaluation} 
 \input{contents/conclusion} 
 \input{contents/references} 
 
 \end{document}
-  
