--- a/contents/accessible/_section.tex
+++ b/contents/accessible/_section.tex
@@ -17,13 +17,14 @@ Imagine a science writer explaining a complicated concept for a mass market maga
 A user must be able to apply the data to their own particular purpose without complicated procedure.
 \end{itemize}
 
-
-
 In this section we will see if it is possible to access data by an average user and how to optimize accessibility.
 
+% The data itself
+\input{contents/accessible/cleaned.tex}
+\input{contents/accessible/analysed.tex}
+\input{contents/accessible/understandable.tex}
+
+% Access to the data
 \input{contents/accessible/available.tex}
-\input{contents/accessible/knowAbout.tex}
-\input{contents/accessible/interpretability.tex}
-\input{contents/accessible/model.tex}
-\input{contents/accessible/format.tex}
-\input{contents/accessible/convenience.tex}
+\input{contents/accessible/convenient.tex}
+\input{contents/accessible/publicised.tex}
